--- a/www/package.json
+++ b/www/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ILUAmination Web Interface for Imagine Nation",
+  "name": "ImagineNationWeb",
   "version": "0.1.0",
   "description": "A web interface for playing the ILUAmination game Imagine Nation.",
   "main": "build/main.js",
@@ -12,6 +12,9 @@
   "dependencies": {
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "socket.io": "^1.3.7",
+    "cookies": "^0.5.1",
+    "winston": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.6",
@@ -22,8 +25,6 @@
   },
   "config": {
     "vendor_modules": [
-      "react-slider",
-      "radium",
       "react",
       "react-dom"
     ],
@@ -31,7 +32,7 @@
       "vendor": "build/vendor.js",
       "main": {
         "out": "build/main.js",
-        "entry": "src/index.js"
+        "entry": "client/index.js"
       }
     }
   },
